--- a/style.css
+++ b/style.css
@@ -53,17 +53,20 @@ button:hover {
 
 #name, #email{
     padding: 3px;
+    color: #0054ad;
 }
 
 label{
-    padding: 3px;
     margin: 3px;
+}
+#contact-form{
+    margin: 3px;;
 }
 
 @media (max-width: 768px) {
     nav ul li {
         justify-content: space-between;
-        padding:10px;
+        padding: 10px;
         margin: 0.5rem 0;
         font-size: 13px;
     }
@@ -75,19 +78,19 @@ label{
         margin: 10px;
     }
     label{
-        padding: 5px;
         margin: 5px;
     }
     #name, #email{
-    padding: 0;
+        padding: 0;
+        color:#0054ad;
     }
 }
 
 @media (max-width: 480px) {
     nav ul li {
         justify-content: space-between;
+        padding: 10px;
         margin: 0.5rem 0;
-        padding:10px;
         font-size: 12px;
     }
     header {
@@ -98,7 +101,8 @@ label{
         padding: 0.4rem 0.8rem;
         margin: 5px;
     }
-     #name, #email{
-    padding: 0;
+    #name, #email{
+        padding: 0;
+        color: #0054ad;
     }
 }
